# orcamento

./: .gitignore  .gitmodules  BudgetToCopyView.cpp  BudgetToCopyView.h  BudgetView.cpp  BudgetView.h  CMakeLists.txt  CONTRIBUTING.md  CategoryView.h  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  CreateNewBudgetAction.h  EstimateExecutingView.h  EstimatePlaningView.h  ExecutionDialog.cpp  ExecutionDialog.h  ExecutionSummaryView.h  ExecutionView.cpp  ExecutionView.h  LICENSE.txt  Makefile  NewDatabaseDialog.cpp  NewDatabaseDialog.h  OrcaDocument.cpp  OrcaDocument.h  OrcaMento.project  OrcaView.h  OrcamentoMainFrame.cpp  OrcamentoMainFrame.h  README.md  SearchOption.h  TODO.md  TotalsView.cpp  TotalsView.h  WalletDetailView.h  WalletOverview.cpp  WalletOverview.h  WalletOverviewDialog.cpp  WalletOverviewDialog.h  WalletView.cpp  (+21 more)
actions/: ChangeEstimate.h  CreateEstimate.h  CreateNewBudget.h  DeleteEstimate.h  InsertBudget.h  InsertEstimate.h  InsertWallet.h  UpdateEstimate.h  UpdateExecution.h  UpdateWallet.h
controller/: BudgetController.hpp  BudgetView.hpp  CMakeLists.txt  EstimateController.hpp  EstimateView.hpp  ExecutionController.hpp  ExecutionView.hpp  MainController.hpp  MainControllerSqlite0_5.cpp  MainControllerSqlite0_5.hpp  Manager.cpp  Manager.hpp  Operation.hpp  PlannerSqlite0_5.cpp  PlannerSqlite0_5.hpp  sql0_5_0.hpp.in
controller-test/: CMakeLists.txt  MainControllerSqlite0_5-unit.cpp  Manager-unit.cpp  PlannerSqlite0_5-unit.cpp
docs/: formatting.md
model/: OrcaAction.h  OrcaDocument.cpp  OrcaDocument.h  OrcaView.h  Search.cpp  Search.h  SearchOption.cpp  SearchOption.h  conversor.cpp  conversor.h  upgrader.cpp  upgrader.h
model/actions/: CopySelectedEstimateTo.h  DeleteExecution.h  ExecuteNextBudget.h  InsertBudget.h  InsertEstimate.h  InsertExecution.h  InsertWallet.h  UpdateEstimate.h  UpdateWallet.h
model/sql/: create_0_2_0.cpp  create_0_2_0.h  create_0_4_0.cpp  create_0_4_0.h  translate_0_2_0_to_0_4_0.cpp  translate_0_2_0_to_0_4_0.h  translate_0_4_0_to_0_4_0_1.cpp  translate_0_4_0_to_0_4_0_1.h
model/views/: BudgetToCopyView.cpp  BudgetToCopyView.h  BudgetView.h  CategoryView.cpp  CategoryView.h  EstimateExecutingView.cpp  EstimateExecutingView.h  EstimatePlaningView.cpp  EstimatePlaningView.h  ExecutionSummaryView.cpp  ExecutionSummaryView.h  ExecutionView.h  TotalsView.cpp  TotalsView.h  WalletDetailView.cpp  WalletDetailView.h  WalletView.cpp  WalletView.h
presenter/: BudgetDetailPresenter.cpp  BudgetDetailPresenter.hpp  BudgetSummaryPresenter.cpp  BudgetSummaryPresenter.hpp  CMakeLists.txt  ControllerOwnerPresenter.hpp  EstimateDetailPresenter.cpp  EstimateDetailPresenter.hpp  EstimateListPresenter.cpp  EstimateListPresenter.hpp  ExecutionDetailPresenter.cpp  ExecutionDetailPresenter.hpp  ExecutionListPresenter.cpp  ExecutionListPresenter.hpp  FormPresenter.cpp  FormPresenter.hpp  HelloWorld.cpp  MainPresenter.cpp  MainPresenter.hpp  Presenter.cpp  Presenter.hpp  SplasherPresenter.cpp  SplasherPresenter.hpp
presenter-test/: BudgetDetailPresenter-unit.cpp  BudgetSummaryPresenter-unit.cpp  CMakeLists.txt  EstimateDetailPresenter-unit.cpp  EstimateListPresenter-unit.cpp  ExecutionDetailPresenter-unit.cpp  ExecutionListPresenter-unit.cpp  MainPresenter-unit.cpp  Presenter-unit.cpp  SplasherPresenter-unit.cpp  Startup-scenario.cpp  StartupScenario.cpp  UserInputChecker.hpp  common.hpp  config.hpp
presenter-test/stubs/: BudgetControllerStub.hpp  EstimateControllerStub.hpp  ExecutionControllerStub.hpp  MainControllerStub.hpp
presenter/common/: InlineTextNotifier.hpp
res/: sql0_5_0.sql
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  Manager-test.cpp  Manager-unit.cpp  PlannerSqlite0_5-test.cpp  PlannerSqlite0_5-unit.cpp  PlannerSqlite0_5.cpp
test/model/: testSearch.cpp  testSearchOption.cpp
ui/: BudgetFilter.cpp  BudgetFilter.h  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  ExecutionDialog.cpp  ExecutionDialog.h  OrcamentoMainFrame.cpp  OrcamentoMainFrame.h  walletoverviewdialog.cpp  walletoverviewdialog.h  wxcrafter.cpp  wxcrafter.h  wxcrafter.wxcp  wxcrafter_ui_bitmaps.cpp
wxsmith/: CreateDatabaseDialog.wxs  ExecutionDialog.wxs  NewDatabaseDialog.wxs  NewDatabaseDialog1.wxs  OrcamentoMainFrame.wxs  WalletOverview.wxs  WalletOverviewDialog.wxs
